# desktop_devcontainer

./: .gitignore  .gitmodules  LICENSE  README.md  debugging_plan.md  dependancies_plan.md  examples.md  git_push_plan.md  instructions.md  knowledge_stack.md  requirements.txt  starred_repos_with_descriptions.json  transfer-knowledge.md
.devcontainer/: Dockerfile  devcontainer.json
src/TD3/: package.xml  setup.cfg  setup.py
src/TD3/config/: td3_config.yaml
src/TD3/launch/: empty_world.launch.py  robot.gazebo.launch.py  start_simulation.launch.py  test_td3.launch.py  train_td3.launch.py
src/TD3/pytorch_models/: TD3_Turtlebot_actor.pth  TD3_Turtlebot_critic.pth
src/TD3/rviz/: turtlebot3.rviz
src/TD3/td3_rl/: gazebo_env.py  test_td3.py  train_td3.py
src/TD3/worlds/: TD3.world
