<?xml version="1.0"?>
<package format="2">
  <name>td3_rl</name>
  <version>0.1.0</version>
  <description>TD3 Reinforcement Learning integrated with ROS and Gazebo</description>
  <maintainer email="gilberttanner.contact@gmail.com">Gilbert Tanner</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
